k8s/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: culture-threads-api-service
  namespace: culture-threads
  labels:
    app: culture-threads-api
    component: backend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: culture-threads-api
    component: backend
