k8s/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: culture-threads-ingress
  namespace: culture-threads
  labels:
    app: culture-threads-api
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "culture-threads-ip"
    networking.gke.io/managed-certificates: "culture-threads-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
    ingress.gcp.kubernetes.io/frontend-config: "culture-threads-frontend-config"
    ingress.gcp.kubernetes.io/backend-config: "culture-threads-backend-config"
spec:
  rules:
  - host: api.culture-threads.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: culture-threads-api-service
            port:
              number: 80
